# kobato-eyes

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  mypy.yml
docs/: architecture.md  exception-audit-db-pipeline.md  quality-roadmap.md
docs/benchmarks/: tagging-gpu.md
scripts/: bench-tagger.ps1  bench_tagger.py  check-db-stress.ps1  check-gpu.ps1  check-gui-smoke.ps1  check-integration.ps1  check-package-smoke.ps1  check.ps1  install-windows.ps1  package-release.ps1
src/core/: __init__.py  config.py  db_writer.py  exceptions.py  fastsig.py  jobs.py  pipeline.py  query.py  scanner.py  search_parser.py  settings.py  signature.py  tag_job.py  watcher.py
src/core/config/: __init__.py  paths.py  schema.py  service.py
src/core/pipeline/: __init__.py  contracts.py  loaders.py  maintenance.py  manual_refresh.py  orchestrator.py  resolver.py  retag.py  scanner.py  signature.py  tagging.py  testhooks.py  types.py  utils.py  watcher.py
src/core/pipeline/stages/: __init__.py  scan_stage.py  tag_stage.py  write_stage.py
src/db/: __init__.py  admin.py  common.py  connection.py  files.py  fts.py  fts_offline.py  repository.py  schema.py  tags.py
src/dup/: __init__.py  candidates.py  cluster.py  indexer.py  refine.py  scanner.py
src/index/: __init__.py  hnsw.py
src/sandbox/: debug_db_open.py
src/services/: __init__.py  db_writing.py  db_writing_lifecycle.py  db_writing_staging.py  db_writing_standard.py
src/sig/: __init__.py  embedder.py  phash.py
src/tagger/: __init__.py  base.py  categories.py  dummy.py  labels_util.py  model_inspection.py  onnx_backend.py  pixai_onnx.py  pixai_torch.py  wd14_onnx.py  wd14_preprocessing.py  wd14_runtime.py
src/ui/: __init__.py  app.py  autocomplete.py  dup_actions.py  dup_cluster_update.py  dup_lifecycle.py  dup_refine_parallel.py  dup_status.py  dup_tab.py  dup_thumbnail_controller.py  dup_tree_controller.py  dup_tree_state.py  dup_widgets.py  dup_workers.py  file_actions.py  icons.py  index_feedback.py  index_lifecycle.py  index_tasks.py  result_delegates.py  search_worker.py  settings_tab.py  splash.py  splash_screen.py  tag_rendering.py  tag_stats.py  tags_autocomplete.py  tags_control_state.py  tags_db.py  tags_delete_state.py  tags_indexing.py  tags_result_actions.py  tags_result_state.py  tags_results.py  tags_search.py  tags_tab.py  tags_workers.py  thumbnail_tasks.py
src/ui/assets/: __init__.py
src/ui/assets/icons/: __init__.py
src/ui/viewmodels/: __init__.py  dup_view_model.py  main_view_model.py  settings_view_model.py  tags_search_state.py  tags_view_model.py
src/ui/widgets/: spinner_overlay.py
src/utils/: __init__.py  env.py  fs.py  hash.py  image_io.py  paths.py  perf_timer.py  search_export.py
tests/: conftest.py  smoke_hnsw.py  test_fixtures.py  test_import_graph.py  test_signature.py  test_tagging_stage.py
tests/core/: test_config.py  test_exceptions.py  test_fastsig.py  test_image_signature.py  test_jobs.py  test_jobs_headless.py  test_pipeline.py  test_pipeline_enqueue.py  test_pipeline_index_once.py  test_pipeline_logging.py  test_pipeline_maintenance.py  test_pipeline_progress.py  test_pipeline_retag_service.py  test_pipeline_retagging.py  test_pipeline_utils.py  test_progress_emitter.py  test_query.py  test_query_terms.py  test_query_to_sql.py  test_retag.py  test_scan_and_tag.py  test_scan_stage.py  test_scanner.py  test_scanner_paths.py  test_scanner_property.py  test_search_parser.py  test_settings_defaults.py  test_settings_service.py  test_tag_job.py  test_watcher_batch.py
tests/core/pipeline/: test_prefetch_loader.py  test_resolver.py  test_resolver_device.py  test_tag_stage.py  test_utils.py  test_watcher_helpers.py  test_write_stage.py
tests/db/: test_bootstrap.py  test_common.py  test_connection_pragmas.py  test_connection_quiesce.py  test_files.py  test_fts.py  test_fts_offline.py  test_repository.py  test_repository_relevance.py  test_repository_search.py  test_reset_database.py
tests/dup/: test_candidates.py  test_cluster.py  test_dup_refine_parallel.py  test_indexer.py  test_refine.py  test_scanner.py
tests/index/: test_hnsw.py  test_pipeline_stages.py
tests/services/: test_db_writing_service.py
tests/sig/: test_openclip_pretrained_fallback.py  test_openclip_res_tuple.py
tests/tagger/: test_dummy.py  test_gpu_onnx_runtime.py  test_labels_util_csv.py  test_model_inspection.py  test_onnx_backend.py  test_pixai_copyright_merge.py  test_pixai_torch.py  test_wd14_input_layout.py  test_wd14_load.py
tests/ui/: test_autocomplete.py  test_autocomplete_rank.py  test_autocomplete_tokens.py  test_dup_cluster_update.py  test_dup_lifecycle.py  test_dup_status.py  test_dup_tab_smoke.py  test_dup_tree_state.py  test_dup_widgets.py  test_dup_workers.py  test_file_actions.py  test_highlight_delegate.py  test_index_feedback.py  test_index_lifecycle.py  test_index_now_headless.py  test_index_tasks.py  test_qt_enums_smoke.py  test_reset_database_dialog.py  test_result_delegate_helpers.py  test_search_worker.py  test_settings_tab.py  test_spinner_overlay_helpers.py  test_tag_stats.py  test_tag_stats_model.py  test_tags_control_state.py  test_tags_delete_state.py  test_tags_result_actions.py  test_tags_result_state.py  test_tags_search_async.py  test_tags_tab_helpers.py  test_tags_tab_smoke.py  test_thumbnail_tasks.py  test_viewmodels.py
tests/utils/: test_env.py  test_fs.py  test_hash.py  test_image_io.py  test_logging_smoke.py  test_paths.py  test_paths_migration.py  test_search_export.py
tools/: bench.py  calibrate_ndup.py  find_magic_numbers.py  kobato-eyes.spec  make_ico.py  migrate_data_paths.py  rebuild_hnsw.py
