[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kobato-eyes"
version = "0.0.1"
description = "Desktop application for tagging images with Danbooru metadata and duplicate detection."
readme = "README.md"
authors = [
    { name = "kobato-eyes developers" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.11"
dependencies = [
    "PyQt6>=6.7.0",
    "pillow>=10.4.0",
    "platformdirs>=4.0.0",
    "numpy>=2.0.0",
    "scikit-image>=0.25.0",
    "opencv-python-headless>=4.10.0.84",
    "Send2Trash>=1.8.3",
    "PyYAML>=6.0",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "mypy>=1.18.0,<2.0",
    "ruff==0.14.0",
    "pytest>=8.3.0,<10.0",
    "pytest-cov>=6.2.1,<7.0",
    "pytest-qt>=4.4.0,<5.0",
    "coverage>=7.6.12,<7.14",
    "hypothesis>=6.115.0",
    "types-PyYAML>=6.0.12.20250915",
]
tagging-cpu = [
    "onnxruntime>=1.18.0",
]
tagging-gpu = [
    "onnxruntime-gpu>=1.18.0",
]
vector = [
    "hnswlib>=0.8.0",
    "open_clip_torch>=2.26.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"ui.assets.icons" = ["*.png", "*.ico"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
line_ending = "\n"
known_first_party = ["ui", "core", "db", "tagger", "dup", "sig", "index", "utils"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501", "B009", "B024", "B027", "B905"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

[tool.ruff.format]
line-ending = "lf"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70
omit = [
    "src/tagger/pixai_onnx.py",
    "src/tagger/wd14_onnx.py",
    "src/ui/app.py",
    "src/ui/dup_tab.py",
    "src/ui/settings_tab.py",
    "src/ui/splash_screen.py",
    "src/ui/tags_tab.py",
]

[tool.mypy]
python_version = "3.10"
platform = "win32"
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
cache_dir = "tmp/mypy_cache"
files = [
    "src/core/config/schema.py",
    "src/core/config/paths.py",
    "src/core/config/service.py",
    "src/core/pipeline/contracts.py",
    "src/core/pipeline/types.py",
    "src/core/pipeline/loaders.py",
    "src/core/pipeline/retag.py",
    "src/core/pipeline/resolver.py",
    "src/core/pipeline/utils.py",
    "src/core/pipeline/testhooks.py",
    "src/core/query.py",
    "src/core/scanner.py",
    "src/core/fastsig.py",
    "src/core/signature.py",
    "src/core/tag_job.py",
    "src/db/schema.py",
    "src/db/common.py",
    "src/db/connection.py",
    "src/db/files.py",
    "src/db/fts.py",
    "src/db/fts_offline.py",
    "src/db/tags.py",
    "src/db/repository.py",
    "src/db/admin.py",
    "src/dup/cluster.py",
    "src/dup/refine.py",
    "src/dup/scanner.py",
    "src/sig/phash.py",
    "src/tagger/base.py",
    "src/tagger/categories.py",
    "src/tagger/dummy.py",
    "src/tagger/onnx_backend.py",
    "src/core/pipeline/stages/write_stage.py",
    "src/core/pipeline/maintenance.py",
    "src/services/db_writing.py",
    "src/ui/dup_refine_parallel.py",
    "src/ui/dup_workers.py",
    "src/ui/file_actions.py",
    "src/ui/index_tasks.py",
    "src/ui/search_worker.py",
    "src/ui/autocomplete.py",
    "src/ui/dup_status.py",
    "src/ui/dup_lifecycle.py",
    "src/ui/dup_cluster_update.py",
    "src/ui/icons.py",
    "src/ui/index_feedback.py",
    "src/ui/index_lifecycle.py",
    "src/ui/tag_rendering.py",
    "src/ui/tags_control_state.py",
    "src/ui/tag_stats.py",
    "src/ui/thumbnail_tasks.py",
    "src/ui/viewmodels/dup_view_model.py",
    "src/ui/viewmodels/settings_view_model.py",
    "src/ui/viewmodels/tags_search_state.py",
    "src/ui/widgets/spinner_overlay.py",
    "src/tagger/labels_util.py",
    "src/utils/env.py",
    "src/utils/fs.py",
    "src/utils/image_io.py",
    "src/utils/search_export.py",
    "src/utils/paths.py",
]
